# Portfolio

./: .env  .pre-commit-config.yaml  README.md  cv.txt  embed_cv.py  main.py  pyproject.toml  requirements.txt
static/: styles.css
static/arcade/: snake.html  tetris.html
templates/: arcade.html  base.html  index.html  jailbreak.html
